Нужно довести до ума Date, а также настроить модалочку

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
-    
+    <div class="chat">
+        <div class="chat_messages"></div>
+        <div class="input_field"><input type="text" class="input" required placeholder="Введи текст и ткни ентер"></div>
+    </div>
 </body>
 </html>
