Настроил отправку сообщений с аудио. Нужно докрутить запись

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
 <body>
     <div class="chat">
         <div class="chat_messages"></div>
-        <div class="input_field"><input type="text" class="input" required placeholder="Введи текст и ткни ентер"></div>
+        <div class="input_field"><input type="text" class="input" required placeholder="Введи текст и ткни ентер">
+            <span class="media_icon record active">&#127908;</span>
+            <span class="media_icon done_record">&#10003;</span>
+            <span class="media_icon record_duration"></span>
+            <span class="media_icon cancel_record">&#10007;</span>
+        </input>
+        </div>
     </div>
 
     <div class="modal no_geo">
