--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>AHJ__HW_geo</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 </head>
@@ -14,6 +14,7 @@
         <div class="chat_messages"></div>
         <div class="input_field"><input type="text" class="input" required placeholder="Введи текст и ткни ентер">
             <span class="media_icon record active">&#127908;</span>
+            <span class="media_icon video active">&#128249;</span>
             <span class="media_icon done_record">&#10003;</span>
             <span class="media_icon record_duration"></span>
             <span class="media_icon cancel_record">&#10007;</span>
